make use of new assertion methods in JUnit 4.13.1